# claude-plugins-snapshot

./: .gitignore  CHANGELOG.md  CLAUDE.en.md  CLAUDE.md  LICENSE  README.en.md  README.md  config.json  install.py  install.sh  pyproject.toml
.claude/: settings.json
.claude-plugin/: plugin.json
.claude/hooks/: auto-test-on-edit.sh  protect-generated-files.sh
global-rules/: CLAUDE.md
global-skills/sync-snapshot/: SKILL.md
hooks/: hooks.json
scripts/: auto-manager.py  create-snapshot.py  git-sync.py  session-start.py  session-start.sh  startup-service.py  sync-snapshot-silent.py  sync-snapshot.py  sync-snapshot.sh
snapshots/: current.json
tests/: README.en.md  README.md  __init__.py  test_auto_manager.py  test_startup_service.py
